--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "BadTiger/esputnik",
+    "name": "badtiger/esputnik",
     "description": "Marketing automation system ESputnik.",
     "license": "MIT",
     "type": "library",
