--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
     "name": "badtiger/esputnik",
     "description": "Marketing automation system ESputnik.",
     "license": "MIT",
-    "type": "vcs",
-    "url":  "https://github.com/badtiger/esputnik",
+    "type": "library",
     "keywords": ["brownie", "esputnik"],
     "homepage": "https://github.com/BadTiger/esputnik",
     "version": "0.1.2",
